# chilean-property-oracle

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/raw/: simulated_rent_data.csv
models/: price_predictor_v1.pkl
notebooks/: 01_exploratory_analysis.ipynb
src/property_oracle/: api.py  data_gen.py  logger.py  model.py  schemas.py  train.py
