[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "property_oracle"
version = "0.1.0"
description = "A stochastic pricing engine for Chilean real estate using Geospatial data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Diego Montenegro", email = "diego.mducaud@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "faker>=19.0.0",  # Para generar datos falsos chilenos
    "joblib>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.280",
    "httpx>=0.24.0",
    "jupyterlab>=4.0.0",
    "seaborn>=0.12.0",    # <--- Nueva
    "matplotlib>=3.7.0"   # <--- Nueva
]

# --- Configuración de Herramientas (Esto es lo que aman los Tech Leads) ---

[tool.ruff]
# Configuración de limpieza de código
line-length = 88
target-version = "py310"
select = ["E", "F", "I"] # E: Errores, F: Pyflakes, I: Import Sorting

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --disable-warnings"